samples/_failures_safe/1761424300_09df0e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d79cd041.c: In function ‘freeGraph’:
./samples/SAFE/__tmp_d79cd041.c:181:23: error: expected declaration or statement at end of input
  181 | void freeGraph(struct Graph *graph) {
      |                       ^~~~~
